tests/ui/coercion/non-primitive-cast-135412.stderr
error[E0605]: non-primitive cast: `&'static str` as `Arc<str>`
  --> $DIR/non-primitive-cast-135412.rs:8:13
   |
LL |     let _ = "String" as Arc<str>;
   |             ^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object
   |
help: consider using the `From` trait instead
   |
LL -     let _ = "String" as Arc<str>;
LL +     let _ = Arc::<str>::from("String");
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
